--- a/crates/tombi-formatter/Cargo.toml
+++ b/crates/tombi-formatter/Cargo.toml
@@ -28,7 +28,7 @@ unicode-segmentation.workspace = true
 pretty_assertions.workspace = true
 rstest.workspace = true
 textwrap.workspace = true
-tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
 tombi-test-lib.workspace = true
 
 [features]
